# open-vario

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  makefile  makefile.docker
cmake/: CMakeLists_Options.txt
cmake/targets/: CMakeLists_stm32wb5mm-dk.txt
doc/: Open Vario - BLE API.odt  Open Vario - Configuration Parameters.ods
docker/: Dockerfile  entrypoint.sh
hardware/gerbers/: Gerber_BoardOutline.GKO  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkLayer.GTO  Gerber_TopSolderMaskLayer.GTS  Gerber_drill_NPTH.DRL  Gerber_drill_PTH.DRL  ReadOnly.Mechanical
hardware/schematics/: pin_map.xlsx
src/: CMakeLists.txt
src/apps/hw-tests/: Console.cpp  Console.h  HwTestBase.h  HwTests.cpp  HwTests.h  IHwTest.h  main.cpp
src/apps/open-vario/: main.cpp
src/apps/test_ble/: BleTest.cpp  BleTest.h  EepromTest.cpp  EepromTest.h  NanoOsConsole.cpp  NanoOsConsole.h  main.cpp
src/bsp/stm32wb5mm-dk/: CMakeLists.txt
src/bsp/stm32wb5mm-dk/STM32WBxx_HAL_Driver/Inc/: stm32wbxx_hal_i2c.h  stm32wbxx_hal_qspi.h  stm32wbxx_hal_spi.h  stm32wbxx_hal_uart.h
src/bsp/stm32wb5mm-dk/STM32_WPAN/utilities/: utilities_common.h
src/bsp/stm32wb5mm-dk/conf/: ble_conf.h  stm32wbxx_hal_conf.h  tl_dbg_conf.h
src/bsp/stm32wb5mm-dk/startup/: syscalls.c  system_stm32wbxx.c
src/bsp/stm32wb5mm-dk/usb/: usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
src/bsps/bsp_stm32l476/: pll.c  stm32l476xx.h
src/drivers/: CMakeLists.txt  i_i2c.h  i_input_pin.h  i_io_pin.h  i_output_pin.h  i_qspi.h  i_serial.h  i_spi.h  i_usb_cdc.h  io_pin.h  spi_pin_cs_driver.cpp  spi_pin_cs_driver.h
src/drivers/generic/: soft_i2c.cpp  soft_i2c.h  spi_pin_cs_driver.cpp  spi_pin_cs_driver.h
src/drivers/stm32wb5mm-dk/: stm32hal_i2c.cpp  stm32hal_i2c.h  stm32hal_iopin.cpp  stm32hal_iopin.h  stm32hal_lpuart.cpp  stm32hal_lpuart.h  stm32hal_qspi.cpp  stm32hal_qspi.h  stm32hal_spi.cpp  stm32hal_spi.h  stm32hal_usart.cpp  stm32hal_usart.h  stm32hal_usb_cdc.cpp  stm32hal_usb_cdc.h
src/firmware/: CMakeLists.txt  main.cpp
src/firmware/app/: circular_buffer.h  mean_filter.h  ov_app.cpp  ov_app.h  ov_data.cpp  ov_data.h  sensors_console.cpp  sensors_console.h
src/firmware/ble/: ble_config_service.cpp  ble_config_service.h  ble_manager.cpp  ble_manager.h  ble_rt_data_service.cpp  ble_rt_data_service.h  ble_sensors_service.h  i_ble_manager.h  i_ble_stack.h
src/firmware/ble/generic/: ble_characteristic.cpp  ble_characteristic.h  ble_service.h  i_ble_attribute.h  i_ble_characteristic.h  i_ble_service.h  i_ble_stack.h
src/firmware/ble/stm32wb5mm-dk/: app_ble.cpp  app_ble.h  app_conf.h  dis_app.c  dis_app.h  hw_ipcc.c  stm32wb5mm_ble_stack.cpp  stm32wb5mm_ble_stack.h  utilities_conf.h
src/firmware/ble/stm32wb5mm-dk/sequencer/: stm32_seq.h
src/firmware/board/: i_board.h
src/firmware/board/stm32wb5mm-dk/: ov_board.cpp  ov_board.h
src/firmware/config/: config_console.cpp  config_console.h  ov_config.cpp  ov_config.h  ov_config_default.h
src/firmware/console/: debug_console.cpp  debug_console.h  i_debug_console.h
src/firmware/filesystem/: dir.cpp  dir.h  file.cpp  file.h  fs.cpp  fs.h  fs_config.h  fs_console.cpp  fs_console.h
src/firmware/freertos/: FreeRTOSConfig.h  lock_guard.h  mutex.cpp  mutex.h  os.cpp  os.h
src/firmware/hmi/: hmi.h  hmi_console.cpp  hmi_console.h  hmi_manager.cpp  hmi_manager.h  i_hmi_manager.h
src/firmware/hmi/screens/: base_screen.cpp  base_screen.h  ble_screen.cpp  ble_screen.h  dashboard1_screen.cpp  dashboard1_screen.h  dashboard2_screen.cpp  dashboard2_screen.h  dashboard3_screen.cpp  dashboard3_screen.h  dashboard4_screen.cpp  dashboard4_screen.h  flight_screen.cpp  flight_screen.h  gnss_screen.cpp  gnss_screen.h  i_hmi_screen.h  settings_display_screen.cpp  settings_display_screen.h  settings_exit_screen.cpp  settings_exit_screen.h  settings_glider_screen.cpp  settings_glider_screen.h  settings_screen.cpp  settings_screen.h  splash_screen.cpp  splash_screen.h  usb_screen.cpp  usb_screen.h
src/firmware/linker/: stm32wb5mm-dk.ld
src/firmware/maintenance/: maintenance_manager.cpp  maintenance_manager.h  maintenance_protocol.cpp  maintenance_protocol.h
src/firmware/recorder/: flight_file.cpp  flight_file.h  flight_recorder.cpp  flight_recorder.h  i_flight_recorder.h  recorder_console.cpp  recorder_console.h
src/firmware/xctrack/: i_xctrack_link.h  xctrack_link.cpp  xctrack_link.h
src/libs/ble/: BleCharacteristic.h  BleService.h  BleUuid128.h  BleUuid16.h  IBleAttribute.h  IBleCharacteristic.h  IBlePeripheralStack.h  IBleService.h  IBleUuid.h
src/libs/board/: IOpenVarioBoard.h
src/libs/cpu/: ICpu.h  ICrc32.h  IHwTimer.h  II2c.h  IInputPin.h  IMcuRtc.h  IPwm.h  ISpi.h  IUsbDeviceCdc.h
src/libs/open-vario/: OpenVarioBlackBox.h  OpenVarioConfig.h  OpenVarioFaults.h  OpenVarioTasks.h
src/libs/os/: IFile.h  IFlagSet.h  ISemaphore.h  IUdpSocket.h  TaskHelper.h
src/libs/simulator/: ISimuDevice.h  ISimulator.h  SimuEeprom.cpp  Simulator.cpp  Simulator.h
src/libs/storage/: IFileSystem.h  NorFlashFs.cpp  NorFlashFs.h
src/os/: CMakeLists.txt  FreeRTOSConfig.h  callbacks.c  delegate.h  dummy_heap.c  lock_guard.h  mutex.cpp  mutex.h  os.cpp  os.h  semaphore.cpp  semaphore.h  thread.cpp  thread.h  timer.cpp  timer.h
src/peripherals/: CMakeLists.txt  barometric_altimeter.cpp  barometric_altimeter.h  date_time.h  fake_button.h  i_accelerometer_sensor.h  i_barometric_altimeter.h  i_barometric_sensor.h  i_button.h  i_display.h  i_gnss.cpp  i_gnss.h  i_storage_memory.h  ism330dhcx.cpp  ism330dhcx.h  ms56xx.cpp  ms56xx.h  ms56xx_i2c.cpp  ms56xx_i2c.h  nmea_gnss.cpp  nmea_gnss.h  pin_button.cpp  pin_button.h  s25flxxxs.cpp  s25flxxxs.h  ssd1315.cpp  ssd1315.h
src/utils/: CMakeLists.txt  circular_buffer.h  mean_filter.h  ring_buffer.h
tools/ov-toolbox/: ov_converter.py  ov_device.py  ov_flightfile.py  ov_protocol.py  ov_requests.py  ov_toolbox.py
tools/ov-toolbox/common/: ov_device.py  ov_flight.py  (+3 more)
(+439 files in other folders)
